# Stewart-Platform-Sim-V3

./: .gitignore  CMakeLists.txt  README.md  Stewart_Platform_V3.cpp  Stewart_Platform_V3.sln  Stewart_Platform_V3.vcxproj  Stewart_Platform_V3.vcxproj.filters  main.cpp
actuator/: ActuatorState.cpp  ActuatorState.h  MotorDriver.cpp  MotorDriver.h
build_tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  StewartSim_V3.sln  StewartSim_V3.vcxproj  StewartSim_V3.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  stewart_tests.vcxproj  stewart_tests.vcxproj.filters  stewart_tests[1]_include.cmake  stewart_tests[1]_tests.cmake
build_tests/Testing/Temporary/: CTestCostData.txt
control/: PDController.h  TaskSpaceController.cpp  TaskSpaceController.h
geometry/: Geometry.cpp  Geometry.h  Kinematics.cpp  Kinematics.h
math/: Math.h
platform/: SafetyMonitor.cpp  SafetyMonitor.h  StewartPlatform.cpp  StewartPlatform.h
tests/: test_controllers.cpp  test_kinematics.cpp  test_utils.cpp
threading/: Logger.cpp  Logger.h  SharedData.h  ThreadedController.cpp  ThreadedController.h  ThreadedFOCDriver.cpp  ThreadedFOCDriver.h  ThreadedSafetyMonitor.cpp  ThreadedSafetyMonitor.h
utils/: LoopTimer.h  RingBuffer.h
